# omics-quilt-demo

./: .gitignore  .pre-commit-config.yaml  .projenrc.ts  README.md  README_WORKFLOW.md  example.env  package-lock.json  package.json
.github/workflows/: build.yml  upgrade.yml
.projen/: deps.json  tasks.json
src/: constants.ts  fastq_config.ts  main.ts  main.wf1_fastq.ts  omics-quilt.fastq.ts  omics-quilt.ts  upath.ts  vivos.ts
src/packager/: Makefile  README.md  mypy.ini  pyproject.toml
src/packager/packager/: __init__.py  constants.py  gsa_handler.py  handler.py  index.py  ssm_parameter_store.py  types.py
src/packager/tests/: conftest.py  test_constants.py  test_handler.py  test_index.py  test_ssm.py
src/packager/tests/outputs/8637245/: Arguments.csv  Quantized.csv  params.json  quilt_metadata.json
test/: constants.test.ts  fastq-config.test.ts  fastq_config.test.ts  fixture.ts  main.test.ts  main.wf1_fastq.test.ts  omics-quilt.fastq.test.ts  omics-quilt.test.ts  omics-workflow-stack.test.ts  omics-workflow-stack.wf1_fastq.test.ts  region.test.ts
test/events/: NA12878.json  NA12878.test-uuid-0x-dead-beef.input.json  benchling-entry.json  benchling-package.json  event-fastq.json  event-local.json  event-omics.json  event-output.json  event-params.json  event-put-object.json  omics-actual.json  omics-repsonse.json  workflow-options.json
test/events/s3_events/: event-east.json  event-params.json  event.json
workflows/fastq/: DEMO.md  aws_region.json
workflows/fastq/us-east-1/: us-east-1.json
workflows/fastq/us-test-0/: us-test-0.json
workflows/vep/: container_image_manifest.json
(+6 files in other folders)
